--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "lodash": "^4.17.21",
     "monaco-editor": "^0.48.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "request": "^2.88.2"
   },
